--- a/Modem Configurator/App.xaml
+++ b/Modem Configurator/App.xaml
@@ -1,12 +1,12 @@
 ﻿<Application x:Class="Modem_Configurator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Modem_Configurator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Color x:Key="BackgroundColor">#ffffff</Color>
         <Color x:Key="ForegroundColor">#000000</Color>
-        <Style TargetType="TextBlock">
+        <Color x:Key="BoxBorderColor">#dddddd</Color>
+        <Style TargetType="Window">
             <Setter Property="FontFamily" Value="Arial" />
             <Setter Property="FontSize" Value="14" />
             <Setter Property="Foreground">
@@ -14,7 +14,36 @@
                     <SolidColorBrush Color="{StaticResource ForegroundColor}" />
                 </Setter.Value>
             </Setter>
+            <Setter Property="Background">
+                <Setter.Value>
+                    <SolidColorBrush Color="{StaticResource BackgroundColor}" />
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
             <Setter Property="TextWrapping" Value="NoWrap" />
+            <Setter Property="Padding" Value="12,8,12,8" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="VerticalAlignment" Value="Stretch" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="HorizontalContentAlignment" Value="Left" />
+            <Setter Property="TextWrapping" Value="NoWrap" />
+            <Setter Property="BorderBrush">
+                <Setter.Value>
+                    <SolidColorBrush Color="{StaticResource BoxBorderColor}" />
+                </Setter.Value>
+            </Setter>
+            <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="Margin" Value="2,1,2,1" />
+            <Setter Property="Padding" Value="8" />
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Padding" Value="4" />
         </Style>
     </Application.Resources>
 </Application>
